Finalized the project

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,11 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(\"Scrapped_articles.csv\")"
+    "df.to_csv(\"Scrapped_articles.csv\")\n",
+    "df.to_json(\"Scrapped_articles.json\")\n"
    ]
   },
   {
@@ -297,12 +298,457 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv(\"Scrapped_articles.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\majal\\Desktop\\PSUT 4.2\\IR\\WikiSraping\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "def embed_text(docs):\n",
+    "    \"\"\"\n",
+    "    Converts text to embeding vectors of size 1024\n",
+    "    \"\"\"\n",
+    "    ## https://huggingface.co/avsolatorio/GIST-large-Embedding-v0\n",
+    "    model = SentenceTransformer(\"avsolatorio/GIST-large-Embedding-v0\", revision=None)\n",
+    "    embeddings = model.encode(docs, convert_to_tensor=True)\n",
+    "    return embeddings   \n",
+    "\n",
+    "def get_scores(query_embedding, doc_embedding):\n",
+    "    scores = F.cosine_similarity(query_embedding, doc_embedding.unsqueeze(0), dim=-1)\n",
+    "    return scores.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_page():\n",
+    "    PERSIST_DIR = \"./storage\"\n",
+    "    if not os.path.exists(PERSIST_DIR+\"/embeddings.pt\"):\n",
+    "        os.makedirs(PERSIST_DIR)\n",
+    "        # with st.spinner(text=\"Embedding in progress... (could take up to 10 mins)\"):\n",
+    "        embeddings = embed_text(df['Content'])\n",
+    "        # with open(PERSIST_DIR+\"/embeddings.pt\", 'wb') as f:\n",
+    "        #     pickle.dump(embeddings, f)\n",
+    "        torch.save(embeddings,PERSIST_DIR+\"/embeddings.pt\" )\n",
+    "        # st.success(\"Embeddings Done\")\n",
+    "    else:\n",
+    "        # with open(PERSIST_DIR+\"/embeddings.pt\", 'rb') as f:\n",
+    "        #     embeddings = pickle.load(f)\n",
+    "        embeddings = torch.load(PERSIST_DIR+\"/embeddings.pt\")\n",
+    "        # st.success(\"Loaded Embeddings from storage\")\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embeddings = load_page()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 0.0096,  0.0189, -0.0241,  ...,  0.0349, -0.0197, -0.0017],\n",
+       "         [ 0.0234,  0.0353, -0.0317,  ...,  0.0024,  0.0028, -0.0171],\n",
+       "         [ 0.0128,  0.0083, -0.0309,  ...,  0.0075,  0.0400, -0.0089],\n",
+       "         ...,\n",
+       "         [-0.0307, -0.0065,  0.0034,  ...,  0.0070, -0.0345,  0.0557],\n",
+       "         [ 0.0038,  0.0161, -0.0105,  ...,  0.0092, -0.0554,  0.0331],\n",
+       "         [-0.0223,  0.0030, -0.0133,  ...,  0.0225, -0.0756,  0.0730]]])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings.unsqueeze(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.         0.79234964 0.7161482  ... 0.42405677 0.45600468 0.415086  ]\n",
+      " [0.79234964 1.         0.7648596  ... 0.3443129  0.39587224 0.36875817]\n",
+      " [0.7161482  0.7648596  1.0000002  ... 0.38477513 0.4007742  0.36818585]\n",
+      " ...\n",
+      " [0.42405677 0.3443129  0.38477513 ... 1.         0.6727283  0.65319854]\n",
+      " [0.45600468 0.39587224 0.4007742  ... 0.6727283  1.0000001  0.7087938 ]\n",
+      " [0.415086   0.36875817 0.36818585 ... 0.65319854 0.7087938  0.9999999 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import torch.nn.functional as F\n",
+    "# from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "# revision = None  # Replace with the specific revision to ensure reproducibility if the model is updated.\n",
+    "\n",
+    "# model = SentenceTransformer(\"avsolatorio/GIST-large-Embedding-v0\", revision=revision)\n",
+    "\n",
+    "# texts = df[\"Content\"]\n",
+    "\n",
+    "# # Compute embeddings\n",
+    "# embeddings = model.encode(texts, convert_to_tensor=True)\n",
+    "\n",
+    "# # Compute cosine-similarity for each pair of sentences\n",
+    "# scores = F.cosine_similarity(embeddings.unsqueeze(1), embeddings.unsqueeze(0), dim=-1)\n",
+    "\n",
+    "# print(scores.cpu().numpy())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1024])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "embeddings[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"machine learning\"\n",
+    "\n",
+    "query_vector = model.encode(query, convert_to_tensor=True)\n",
+    "\n",
+    "scores = F.cosine_similarity(query_vector, embeddings.unsqueeze(0), dim=-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.6339],\n",
+       "        [0.4861],\n",
+       "        [0.5248],\n",
+       "        [0.4532],\n",
+       "        [0.3883],\n",
+       "        [0.4932],\n",
+       "        [0.5485],\n",
+       "        [0.5604],\n",
+       "        [0.6162],\n",
+       "        [0.4924],\n",
+       "        [0.8514],\n",
+       "        [0.6889],\n",
+       "        [0.6221],\n",
+       "        [0.5297],\n",
+       "        [0.6644],\n",
+       "        [0.6373],\n",
+       "        [0.5814],\n",
+       "        [0.6339],\n",
+       "        [0.6345],\n",
+       "        [0.6545],\n",
+       "        [0.5871],\n",
+       "        [0.5136],\n",
+       "        [0.4605],\n",
+       "        [0.4226],\n",
+       "        [0.5202],\n",
+       "        [0.5810],\n",
+       "        [0.6203],\n",
+       "        [0.5745],\n",
+       "        [0.5282],\n",
+       "        [0.5197],\n",
+       "        [0.4394],\n",
+       "        [0.3178],\n",
+       "        [0.4165],\n",
+       "        [0.3829],\n",
+       "        [0.3759],\n",
+       "        [0.3877],\n",
+       "        [0.3231],\n",
+       "        [0.3810],\n",
+       "        [0.3820],\n",
+       "        [0.3729],\n",
+       "        [0.6937],\n",
+       "        [0.6304],\n",
+       "        [0.5556],\n",
+       "        [0.6787],\n",
+       "        [0.5482],\n",
+       "        [0.6355],\n",
+       "        [0.5718],\n",
+       "        [0.5303],\n",
+       "        [0.5974],\n",
+       "        [0.5548]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"Scores\"] = scores.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Content</th>\n",
+       "      <th>Link</th>\n",
+       "      <th>Topic</th>\n",
+       "      <th>Scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>10</td>\n",
+       "      <td>Machine learning</td>\n",
+       "      <td>Machine learning (ML) is a field of study in a...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Machine_learning</td>\n",
+       "      <td>Machine Learning</td>\n",
+       "      <td>0.851448</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Data mining</td>\n",
+       "      <td>Data mining is the process of extracting and d...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Data_mining</td>\n",
+       "      <td>Data Mining</td>\n",
+       "      <td>0.693737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Quantum machine learning</td>\n",
+       "      <td>Quantum machine learning is the integration of...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Quantum_machine_...</td>\n",
+       "      <td>Machine Learning</td>\n",
+       "      <td>0.688922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>43</td>\n",
+       "      <td>Examples of data mining</td>\n",
+       "      <td>Data mining, the process of discovering patter...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Examples_of_data...</td>\n",
+       "      <td>Data Mining</td>\n",
+       "      <td>0.678720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Boosting (machine learning)</td>\n",
+       "      <td>In machine learning, boosting is an ensemble m...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Boosting_(machin...</td>\n",
+       "      <td>Machine Learning</td>\n",
+       "      <td>0.664430</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Feature (machine learning)</td>\n",
+       "      <td>In machine learning and pattern recognition, a...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Feature_(machine...</td>\n",
+       "      <td>Machine Learning</td>\n",
+       "      <td>0.654471</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Adversarial machine learning</td>\n",
+       "      <td>Adversarial machine learning is the study of t...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Adversarial_mach...</td>\n",
+       "      <td>Machine Learning</td>\n",
+       "      <td>0.637321</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45</th>\n",
+       "      <td>45</td>\n",
+       "      <td>Data stream mining</td>\n",
+       "      <td>Data Stream Mining (also known as stream learn...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Data_stream_mining</td>\n",
+       "      <td>Data Mining</td>\n",
+       "      <td>0.635532</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>18</td>\n",
+       "      <td>Active learning (machine learning)</td>\n",
+       "      <td>Active learning is a special case of machine l...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Active_learning_...</td>\n",
+       "      <td>Machine Learning</td>\n",
+       "      <td>0.634536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Artificial intelligence</td>\n",
+       "      <td>Artificial intelligence (AI) is the intelligen...</td>\n",
+       "      <td>https://en.wikipedia.org/wiki/Artificial_intel...</td>\n",
+       "      <td>Artificial Intelligence</td>\n",
+       "      <td>0.633931</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Unnamed: 0                               Title  \\\n",
+       "10          10                    Machine learning   \n",
+       "40          40                         Data mining   \n",
+       "11          11            Quantum machine learning   \n",
+       "43          43             Examples of data mining   \n",
+       "14          14         Boosting (machine learning)   \n",
+       "19          19          Feature (machine learning)   \n",
+       "15          15        Adversarial machine learning   \n",
+       "45          45                  Data stream mining   \n",
+       "18          18  Active learning (machine learning)   \n",
+       "0            0             Artificial intelligence   \n",
+       "\n",
+       "                                              Content  \\\n",
+       "10  Machine learning (ML) is a field of study in a...   \n",
+       "40  Data mining is the process of extracting and d...   \n",
+       "11  Quantum machine learning is the integration of...   \n",
+       "43  Data mining, the process of discovering patter...   \n",
+       "14  In machine learning, boosting is an ensemble m...   \n",
+       "19  In machine learning and pattern recognition, a...   \n",
+       "15  Adversarial machine learning is the study of t...   \n",
+       "45  Data Stream Mining (also known as stream learn...   \n",
+       "18  Active learning is a special case of machine l...   \n",
+       "0   Artificial intelligence (AI) is the intelligen...   \n",
+       "\n",
+       "                                                 Link  \\\n",
+       "10     https://en.wikipedia.org/wiki/Machine_learning   \n",
+       "40          https://en.wikipedia.org/wiki/Data_mining   \n",
+       "11  https://en.wikipedia.org/wiki/Quantum_machine_...   \n",
+       "43  https://en.wikipedia.org/wiki/Examples_of_data...   \n",
+       "14  https://en.wikipedia.org/wiki/Boosting_(machin...   \n",
+       "19  https://en.wikipedia.org/wiki/Feature_(machine...   \n",
+       "15  https://en.wikipedia.org/wiki/Adversarial_mach...   \n",
+       "45   https://en.wikipedia.org/wiki/Data_stream_mining   \n",
+       "18  https://en.wikipedia.org/wiki/Active_learning_...   \n",
+       "0   https://en.wikipedia.org/wiki/Artificial_intel...   \n",
+       "\n",
+       "                      Topic    Scores  \n",
+       "10         Machine Learning  0.851448  \n",
+       "40              Data Mining  0.693737  \n",
+       "11         Machine Learning  0.688922  \n",
+       "43              Data Mining  0.678720  \n",
+       "14         Machine Learning  0.664430  \n",
+       "19         Machine Learning  0.654471  \n",
+       "15         Machine Learning  0.637321  \n",
+       "45              Data Mining  0.635532  \n",
+       "18         Machine Learning  0.634536  \n",
+       "0   Artificial Intelligence  0.633931  "
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "df.sort_values(by=\"Scores\", ascending=False).head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
